--- a/partials/contact.html
+++ b/partials/contact.html
@@ -42,11 +42,12 @@
     </form>
 
     <div class="mt-4 small muted">
-      Or reach me on: <a href="https://github.com/HuzaifaShoukat2" class="link-light">GitHub</a> ·
-      <a href="https://www.linkedin.com/in/huzaifa-shoukat-a9bb15250/" class="link-light">LinkedIn</a> ·
+      Or reach me on: <a href="https://github.com/HuzaifaShoukat2" class="link-light"  target="_blank" rel="nooppener noreffer nofollow">GitHub</a> ·
+      <a href="https://www.linkedin.com/in/huzaifa-shoukat-a9bb15250/" class="link-light"  target="_blank" rel="nooppener noreffer nofollow">LinkedIn</a> ·
       <a
         href="mailto:huzaifashoukat11@gmail.com"
         class="link-light"
+         target="_blank" rel="nooppener noreffer nofollow"
         >Email</a
       >
     </div>
