--- a/partials/hero.html
+++ b/partials/hero.html
@@ -8,9 +8,9 @@
         <a class="btn btn-outline-light btn-lg" href="#contact">Hire / Contact</a>
       </div>
       <div class="mt-4 social-links d-flex gap-3">
-        <a href="https://github.com/HuzaifaShoukat2" class="icon-btn" aria-label="GitHub"><i class="fa-brands fa-github"></i></a>
-        <a href="https://www.linkedin.com/in/huzaifa-shoukat-a9bb15250/" class="icon-btn" aria-label="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="mailto:huzaifashoukat11@gmail.com" class="icon-btn" aria-label="Email"><i class="fa-solid fa-envelope"></i></a>
+        <a href="https://github.com/HuzaifaShoukat2" class="icon-btn" aria-label="GitHub" target="_blank" rel="nooppener noreffer nofollow"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/huzaifa-shoukat-a9bb15250/" class="icon-btn" aria-label="LinkedIn"  target="_blank" rel="nooppener noreffer nofollow"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="mailto:huzaifashoukat11@gmail.com" class="icon-btn" aria-label="Email"  target="_blank" rel="nooppener noreffer nofollow"><i class="fa-solid fa-envelope"></i></a>
       </div>
     </div>
 
